# samething

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  readme.md
.github/workflows/: build_toolchain.yml  build_unix_toolchain.yml
cmake/toolchain/: unix.cmake
toolchains/: readme.md
toolchains/linux/: build_toolchain.sh
toolchains/unix/: build_toolchain.sh
toolchains/unix/cmake/: llvm-stage1.cmake  llvm-stage2.cmake
